force-app/main/default/objects/Hierarchy_Sync_Log__c/Hierarchy_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks each hierarchy synchronisation run, recording counts of participants created, updated, or deactivated and any errors.</description>
    <label>Hierarchy Sync Log</label>
    <nameField><label>Hierarchy Sync Log Number</label><displayFormat>HSL-{00000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Hierarchy Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>