force-app/main/default/objects/Hierarchy_Sync_Log__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>