force-app/main/default/objects/Hierarchy_Sync_Log__c/fields/Participants_Created__c.field-meta.xml
<CustomField>
    <fullName>Participants_Created__c</fullName>
    <label>Participants Created</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>