force-app/main/default/objects/Hierarchy_Sync_Log__c/fields/Periods_Synced__c.field-meta.xml
<CustomField>
    <fullName>Periods_Synced__c</fullName>
    <label>Periods Synced</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>