force-app/main/default/objects/Hierarchy_Sync_Log__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Text</type>
    <length>30</length>
</CustomField>