force-app/main/default/objects/Hierarchy_Sync_Log__c/fields/Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Sync_Date__c</fullName>
    <label>Sync Date</label>
    <type>DateTime</type>
</CustomField>